# my-blog-practice

./: pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/styles/: main.css
content/: my-first-post.md
tests/: test_basic.py
